test/trivial/bradc/undefinedfn.good
undefinedfn.chpl:1: In function 'main':
undefinedfn.chpl:4: error: unresolved call 'foo()'
undefinedfn.chpl:4: note: because no functions named foo found in scope
